// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`startServerEpic actions snapshot when on api request errors 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "startServer/INIT",
  },
  Object {
    "notification": Object {
      "text": "",
      "type": "error",
    },
    "type": "notifications/ADD",
  },
]
`;

exports[`startServerEpic actions snapshot when response object hasn't got errors 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "startServer/INIT",
  },
  Object {
    "id": "some id",
    "type": "servers/START",
  },
]
`;
